

2008-10-16  Sancho Lerena <slerena@artica.es>

	* integria_db.sql: Stripped enterprise SQL code.

	* config_process.php: Added include for functions.php (missing).

	* functions.php: Added enterprise function hooks and constants.

	* functions_db.php: Adapted code for new enterprise function syntax.

	* side_menu.php: Stripped enterprise links.

	* task_detail.php: Some improvements in creation of a task (quick
	link to created task, removed graph info in creation process.)

	* user.php: Profile information with enteprise include hook.

2008-10-10  Esteban Sanchez  <estebans@artica.es>

	* include/functions_calendar.php: Removed undefined variable and
	replaced by a fixed string.

	* operation/incidents/incident_search.php: Fixes to solve division by
	zero errors.

2008-10-10  Esteban Sanchez  <estebans@artica.es>

	* integria_db.sql: Added cost field to tinventory. Change description
	fields to text instead of varchars. Fixed some foreign key actions
	when deleting.

	* godmode/grupos/configurar_grupo.php,
	godmode/setup/event.php, godmode/usuarios/role_manager.php,
	operation/buildings/building_detail.php,
	operation/incidents/type_detail.php, 
	operation/manufacturers/manufacturer_detail.php, 
	godmode/grupos/lista_grupos.php: Rewritten to use integria style for
	forms. Style correction and use of common functions.

	* operation/contacts/contact_detail.php,
	operation/contracts/contract_detail.php: Added filter by company
	option.

	* operation/incidents/incident.php: Moved tab configuration to a
	function. Manage goto incident form in sidebar menu. Added a callback
	to configure_incident_search_form() to query for stats for the
	incidents which are shown at the bottom.

	* operation/incidents/incident_detail.php: Removed reference to old
	tgroup_manager table.

	* operation/incidents/incident_search.php: Use __(). Added an optional
	parameter (show_stats) to show stats of the incidents instead of
	displaying the results.
